[refactor] 중복 호출 메서드 변수로 추출
중복 호출 메서드 변수로 추출 및 코드 포맷팅